[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rrap-dg"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Takuya Iwanaga", email = "takuyai@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "scipy",
    "xarray",
    "rasterio",
    "rioxarray",
    "netCDF4",
    "typer",
    "rich",
    "tqdm",
    "juliacall",
    "juliapkg",
    "datapackage",
    "provenaclient",
    "pydantic[dotenv]==1.10.17",
    "toml==0.10.2"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/rrap-dg#readme"
Issues = "https://github.com/unknown/rrap-dg/issues"
Source = "https://github.com/unknown/rrap-dg"


[project.scripts]
rrapdg = "rrap_dg.main:app"

[tool.hatch.version]
path = "rrap_dg/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=rrap_dg --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "rrap_dg/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
