[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rrap-dg"
description = ''
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Takuya Iwanaga", email = "takuyai@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "scipy",
    "xarray",
    "rasterio",
    "rioxarray",
    "netCDF4",
    "typer",
    "rich",
    "tqdm",
    "juliacall",
    "juliapkg",
    "datapackage",
    "provenaclient",
    "pydantic>=2.0",
    "pydantic-settings",
    # minimum versions for transitive dependencies to solve security issues
    "python-jose>=3.4.0",
    "urllib3>=2.6.3",
    "starlette>=0.49.1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/rrap-dg#readme"
Issues = "https://github.com/unknown/rrap-dg/issues"
Source = "https://github.com/unknown/rrap-dg"


[project.scripts]
rrapdg = "rrap_dg.main:app"

[tool.hatch.version]
path = "rrap_dg/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=rrap_dg --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "rrap_dg/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
